* Add @Parser::setDocumentRootDirectory()@ and @Parser::getDocumentRootDirectory()@.
* Add @Parser::setImages()@ and @Parser::isImageTagAllowed()@.
* Add @Parser::setBlockTags()@ and @Parser::isBlockTagAllowed()@ (closes "#138":https://github.com/textile/php-textile/issues/138).
* Add @Parser::setLinkRelationShip()@ and @Parser::getLinkRelationShip()@.
* Deprecate @Parser::textileThis()@, @Parser::textileRestricted()@ and @Parser::textileCommon()@ in favour of the more versatile @Parser::parse()@.

h2. "Version 3.5.5 - 2014/01/02":https://github.com/textile/php-textile/releases/tag/v3.5.5

* Fix rendering of left and right image alignment in non-lite restricted mode (closes "#132":https://github.com/textile/php-textile/issues/132).
* Fix wrong triggered error type when using the deprecated @$encode@ option of @Parser::textileThis()@.
* Fix attribute regular expression to stop it matching multiple times (closes "#131":https://github.com/textile/php-textile/issues/131).
* Fix rendering of lists in table cells with span attributes set (closes "#135":https://github.com/textile/php-textile/issues/135).
* Throws an exception if @Parser::__construct()@ is given invalid document type, instead of eating it silently and returning document using the default content-type you weren't wishing for. Prevents issues where you want HTML5, but silently got XHTML due to typo or an issue in application design.
* Clean user-supplied styles prior to sorting and re-formatting.
* Remove dead code and duplicated procedures as outlined by code coverage reports.
* Remove unused internal method @Parser::fSpecial()@.
* Test code coverage, coding style and run unit tests against "HHVM":http://hhvm.com.
* Footnote reference numbers support unicode characters.
* Use named sub-patterns in regular expressions (closes "#121":https://github.com/textile/php-textile/issues/121).
* Refactored link detection code.

h2. "Version 3.5.4 - 2013/11/06":https://github.com/textile/php-textile/releases/tag/v3.5.4