@@ -12,6 +12,7 @@ h2. Version 3.6.0 - upcoming
 * Add @Parser::setImages()@ and @Parser::isImageTagAllowed()@.
 * Add @Parser::setBlockTags()@ and @Parser::isBlockTagAllowed()@ (closes "#138":https://github.com/textile/php-textile/issues/138).
 * Add @Parser::setLinkRelationShip()@ and @Parser::getLinkRelationShip()@.
+* Add @Parser::setLineWrap()@ and @Parser::isLineWrapAllowed()@.
 * Deprecate @Parser::textileThis()@, @Parser::textileRestricted()@ and @Parser::textileCommon()@ in favour of the more versatile @Parser::parse()@.
 
 h2. "Version 3.5.5 - 2014/01/02":https://github.com/textile/php-textile/releases/tag/v3.5.5
